chore: update spring security to use oauth from git. Other controllers need to be configured yet to work with the git token
