# src/main/java/org/unamur/controller/GithubApiController.java
@@ -1,12 +1,10 @@
 package org.unamur.controller;
 
-import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.web.bind.annotation.RestController;
@@ -18,36 +16,37 @@ import java.util.List;
 import java.util.Map;
 
 @Slf4j
-@AllArgsConstructor
+//@RequiredArgsConstructor
 @RestController
 public class GithubApiController implements GithubApi {
 
-    private final WebClient webClient;
+    private final WebClient githubWebClient;
     private final OAuth2AuthorizedClientService authorizedClientService;
+
+    public GithubApiController(WebClient githubWebClient, OAuth2AuthorizedClientService authorizedClientService, OAuth2AuthorizedClientManager authorizedClientManager) {
+        this.githubWebClient = githubWebClient;
+        this.authorizedClientService = authorizedClientService;
+    }
+
 
     @Override
     public ResponseEntity<Map<String, Object>> getUserInfo() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.getPrincipal() instanceof OAuth2User oauth2User) {
+        if (authentication != null && authentication.getPrincipal() instanceof OAuth2User oauth2User) {
             return ResponseEntity.ok(oauth2User.getAttributes());
         }
-        return ResponseEntity.badRequest().build();
+        return ResponseEntity.status(401).build();
     }
 
     @Override
     public ResponseEntity<List<GithubRepo>> getMyRepos() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null) {
+            return ResponseEntity.status(401).build();
+        }
 
-        OAuth2AuthorizedClient client = authorizedClientService.loadAuthorizedClient(
-                "github",
-                authentication.getName()
-        );
-
-        String githubToken = client.getAccessToken().getTokenValue();
-
-        List<GithubRepo> repos = webClient.get()
+        List<GithubRepo> repos = githubWebClient.get()
                 .uri("/user/repos")
-                .header(HttpHeaders.AUTHORIZATION, "Bearer " + githubToken)
                 .retrieve()
                 .bodyToFlux(GithubRepo.class)
                 .collectList()
