# src/main/java/org/unamur/controller/MetricsController.java
@@ -7,7 +7,7 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.unamur.api.MetricsApi;
-import org.unamur.model.PullRequestMetrics;
+import org.unamur.model.PrMetrics;
 import org.unamur.service.CodeQLService;
 import org.unamur.service.MetricsService;
 import org.unamur.service.SonarService;
@@ -26,17 +26,16 @@ public class MetricsController implements MetricsApi {
     private final CodeQLService codeQlService;
 
     @Override
-    public ResponseEntity<PullRequestMetrics> getMetrics(URI projectUrl, String prId) {
-        PullRequestMetrics metrics = metricsService.getMetrics(projectUrl, prId);
+    public ResponseEntity<PrMetrics> getMetrics(URI projectUrl, String prId) {
+        PrMetrics metrics = metricsService.getMetrics(projectUrl, prId);
         return ResponseEntity.ok(metrics);
     }
 
     @Override
     public ResponseEntity<Void> postMetrics(String prId, String projectUrl, MultipartFile sarifFile, MultipartFile impactedFiles, MultipartFile callGraphCsv) {
-        metricsService.createOrUpdateMetrics(prId, projectUrl, sarifFile, impactedFiles);
         Map<String, String> sonarMetrics = sonarService.getSonarMetrics();
         String dotFile = codeQlService.createDotFile(callGraphCsv);
-        metricsService.createOrUpdateMetrics(prId, projectUrl, sonarMetrics, dotFile);
+        metricsService.createOrUpdateMetrics(prId, projectUrl, sonarMetrics, callGraphCsv, sarifFile, impactedFiles, dotFile);
         template.convertAndSend("/topic/metrics/%s".formatted(prId), "READY");
         return ResponseEntity.ok().build();
     }
